Grease Pencil: Multiframe editing doesn't update properly #101547

Closed
opened 2022-10-02 12:15:32 +02:00 by Julien Kaspar · 12 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 22:40, hash: 206dead860
Worked: (newest version of Blender that worked as expected)

Short description of error
When enabling Multiframe editing it doesn't reliably update the lines.
In this example I didn't originally select all keyframes. If I do so afterwards, the viewport doesn't update immediately but only after I navigate the viewport.

Note that the lines also briefly flickered in the onion skinning colors.
If the view is in Front Orthographic, the lines can also have difficulties drawing on top of the grid overlay.
That's another way of reproducing the flickering when updating the viewport.

Exact steps for others to reproduce the error

  • Add a grease pencil object
  • Make sure the Onion skinning overlay is off
  • Enable Auto Keying in the timeline and draw a new line each frame
  • Make sure all keyframes are deselected
  • Enable Multiframe editing in the header
  • Select all keyframes in the timeline
  • Navigate the viewport

Also try switching the current frame and see how the lines flicker.
#101547.blend
gp_bug1.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 22:40, hash: `206dead860` Worked: (newest version of Blender that worked as expected) **Short description of error** When enabling Multiframe editing it doesn't reliably update the lines. In this example I didn't originally select all keyframes. If I do so afterwards, the viewport doesn't update immediately but only after I navigate the viewport. Note that the lines also briefly flickered in the onion skinning colors. If the view is in Front Orthographic, the lines can also have difficulties drawing on top of the grid overlay. That's another way of reproducing the flickering when updating the viewport. **Exact steps for others to reproduce the error** - Add a grease pencil object - Make sure the Onion skinning overlay is off - Enable Auto Keying in the timeline and draw a new line each frame - Make sure all keyframes are deselected - Enable Multiframe editing in the header - Select all keyframes in the timeline - Navigate the viewport Also try switching the current frame and see how the lines flicker. [#101547.blend](https://archive.blender.org/developer/F13608270/T101547.blend) [gp_bug1.mp4](https://archive.blender.org/developer/F13605910/gp_bug1.mp4)
Poster
Collaborator

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @antoniov

Added subscriber: @antoniov

Could you test if this only happens when you use Select All or Unselect All? I mean, if you select the keyframes with the mouse in dopesheet works?

Could you test if this only happens when you use `Select All` or Unselect All? I mean, if you select the keyframes with the mouse in dopesheet works?

Added subscriber: @amelief

Added subscriber: @amelief

@amelief dout think this can be a missing update?

@amelief dout think this can be a missing update?
Poster
Collaborator

In #101547#1426620, @antoniov wrote:
Could you test if this only happens when you use Select All or Unselect All? I mean, if you select the keyframes with the mouse in dopesheet works?

Select all or deselect all doesn't update the Multiframe drawing when I do it in the dopesheet, but it does when I do it in the viewport.
And yes, if I select keyframes with the mouse in the dopesheet it does properly update the viewport.

> In #101547#1426620, @antoniov wrote: > Could you test if this only happens when you use `Select All` or Unselect All? I mean, if you select the keyframes with the mouse in dopesheet works? Select all or deselect all doesn't update the Multiframe drawing when I do it in the dopesheet, but it does when I do it in the viewport. And yes, if I select keyframes with the mouse in the dopesheet it does properly update the viewport.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Yes, I think there's a missing update in some of the selection operators. Hopefully, it should not be hard to fix.
Quickly going through each of them, it seems to be working for click-based selection and unselection, but not for select all/box/circle/lasso.

Yes, I think there's a missing update in some of the selection operators. Hopefully, it should not be hard to fix. Quickly going through each of them, it seems to be working for click-based selection and unselection, but not for select all/box/circle/lasso.
Amélie Fondevilla self-assigned this 2022-10-03 13:00:49 +02:00

This issue was referenced by 567e3f6508

This issue was referenced by 567e3f650836ef060912c540013eb8fa0f447fe6

This issue was referenced by f7a781d45f

This issue was referenced by f7a781d45fcc79844c4d7fc8a17ede3d6cfc1eaf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101547
There is no content yet.